# ark

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  ark_docker  docker-compose.yml  pyproject.toml  run
ark/: cli.py  models.py  pipeline.py
ark/agents/: detector.py  scholar.py  verifier.py
ark/llm/: ollama.py
ark/verify/: arxiv.py  similarity.py
docker/: .env.example  Dockerfile  docker-compose.yml
tests/fixtures/: flairr_ts.py
